- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.2.3
 
- 
        
 - 
        69cd28b820 (qt/qtwebengine/dev) be46b3a769 (qt/qtwebengine/6.2) be46b3a769 (qt/qtwebengine/6.2) be46b3a769 (qt/tqtc-qtwebengine/6.2) b32168cb4d (qt/qtwebengine/6.3) b32168cb4d (qt/tqtc-qtwebengine/6.3) b32168cb4d (qt/qtwebengine/6.3.1)
 
Hi
We migrate our app to Qt 6.2.3 (attached, the output of the configuration)
But some users cannot start the application, with the following error:
xkbcommon: ERROR: Couldn't process include statement for 'us(simple)' xkbcommon: ERROR: Abandoning symbols file "(unnamed)" xkbcommon: ERROR: Failed to compile xkb_symbols xkbcommon: ERROR: Failed to compile keymap [25778:25793:0223/205624.762296:FATAL:xkb_keyboard_layout_engine.cc(640)] Keymap file failed to load: us-simple Trace/breakpoint trap (core dumped)
I don't reproduce the issue, but it seems to be when several layouts are installed. I also find a similar feedback on another app: https://forums.ankiweb.net/t/anki-2-1-50-beta-1-2/15608/19 (where the user seems to also get this problem since Qt 6). Qt 5 doesn't have this issue.
BR,
| For Gerrit Dashboard: QTBUG-101201 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 405130,2 | Fix fatal error in getCurrentKeyboardLayout() | dev | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 406080,2 | Fix fatal error in getCurrentKeyboardLayout() | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 406081,2 | Fix fatal error in getCurrentKeyboardLayout() | 6.3 | qt/qtwebengine | Status: MERGED | +2 | 0 |