Fix fatal error in getCurrentKeyboardLayout()

FATAL:xkb_keyboard_layout_engine.cc(640)] Keymap file failed to load: dk(polytonic)

Remove unnecessary tokenization of XKB layout.
Parsing of layout configuration is already handled by
XkbKeyboardLayoutEngine::ParseLayoutName().

Fixes: QTBUG-101201
Task-number: QTBUG-92971
Change-Id: Ia4f09ed99eb82064a3b12e14eda69a6e0e12b0dd
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 69cd28b820ba8f8c578591b98f3ad88b00efcef3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>