src/core/ozone/ozone_platform_qt.cpp
@@ -184,29 +184,16 @@ static std::string getCurrentKeyboardLayout()
     if (XkbRF_GetNamesProp(dpy, nullptr, &vdr) == 0)
         return std::string();
 
-    char *layout = strtok(vdr.layout, ",");
-    for (int i = 0; i < state.group; i++) {
-        layout = strtok(nullptr, ",");
-        if (layout == nullptr)
-            return std::string();
-    }
+    if (!vdr.layout)
+        return std::string();
 
     if (!vdr.variant)
-        return layout;
+        return std::string(vdr.layout);
 
-    char *variant = strtok(vdr.variant, ",");
-    if (!variant)
-        return layout;
-
-    for (int i = 0; i < state.group; i++) {
-        variant = strtok(nullptr, ",");
-        if (variant == nullptr)
-            return layout;
-    }
-
-    std::string layoutWithVariant = layout;
+    std::string layoutWithVariant = vdr.layout;
     layoutWithVariant = layoutWithVariant.append("-");
-    layoutWithVariant = layoutWithVariant.append(variant);
+    layoutWithVariant = layoutWithVariant.append(vdr.variant);
+
     return layoutWithVariant;
 }
 #endif // BUILDFLAG(USE_XKBCOMMON)
